<resources>
    <string name="app_name" translatable="false">Campus Live</string>
    <string name="headline" translatable="false">HeadLine</string>
    <string name="description" translatable="false">Description</string>
    <string name="swipe_left_to_read_more" translatable="false">swipe left to discover..</string>
    <string name="tap_here_for_more" translatable="false">Tap here for more</string>
    <string name="head" translatable="false">Head</string>
    <string name="discover" translatable="false">Discover</string>
    <string name="about" translatable="false">About</string>
    <string name="events" translatable="false">Events</string>
    <string name="bncet" translatable="false">𝗕𝗡𝗖𝗘𝗧</string>
    <string name="campus_live">Campus Live</string>
    <string name="home">Home</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unlock_campus_life_s_best_kept_secrets">Unlock Campus Life\'s Best Kept Secrets</string>
    <string name="discover_hidden_gems_and_stay_in_the_loop_with_campus_live">Discover hidden gems and stay in the loop with Campus Live.</string>
    <string name="know_more_about_college">Know more </string>
    <string name="bncet_receives_top_performing_college_award_from_abp_news">• BNCET Receives Top Performing College Award from ABP News</string>
    <string name="analyst_recognitions">Analyst Recognitions</string>
    <string name="we_are_proud_to_announce_that_bncet_has_been_recognized_as_a_top_performing_college_by_abp_news_among_top_colleges_of_pan_india_this_recognition_is_a_testament_to_the_hard_work_and_dedication_of_our_faculty_staff_and_students_in_achieving_academic_excellence">• We are proud to announce that BNCET has been recognized as a top-performing college by ABP News among top colleges of PAN India. This recognition is a testament to the hard work and dedication of our faculty, staff, and students in achieving academic excellence.</string>
    <string name="bncet_honored_with_excellence_in_education_award">• BNCET Honored with Excellence in Education Award</string>
    <string name="we_are_delighted_to_share_that_bncet_has_been_honored_with_the_excellence_in_education_award_presented_by_the_minister_of_urban_development_government_of_uttar_pradesh_our_commitment_to_providing_high_quality_education_and_preparing_our_students_for_successful_careers_has_been_recognized_by_the_government_and_our_peers_in_the_education_industry">• We are delighted to share that BNCET has been honored with the Excellence in Education award presented by the Minister of Urban Development, Government of Uttar Pradesh. Our commitment to providing high-quality education and preparing our students for successful careers has been recognized by the government and our peers in the education industry.</string>
    <string name="companies_visiting_bncet_campus">Companies Visiting BNCET Campus</string>
    <string name="bncet_college_is_proud_to_host_some_of_the_leading_companies_from_diverse_industries_offering_our_students_exciting_opportunities_for_internships_and_placements_our_campus_has_welcomed_companies_such_as_company_1_company_2_company_3_company_4_and_many_more_these_companies_are_known_for_their_innovative_solutions_and_groundbreaking_products_and_have_a_strong_reputation_in_their_respective_industries_stay_tuned_for_updates_on_upcoming_campus_recruitment_drives_and_job_opportunities_from_these_industry_leaders">BNCET college is proud to host some of the leading companies from diverse industries, offering our students exciting opportunities for internships and placements. Our campus has welcomed companies such as BYJU\'\S, BAJAJ, HCL and many more. These companies are known for their innovative solutions and groundbreaking products and have a strong reputation in their respective industries. Stay tuned for updates on upcoming campus recruitment drives and job opportunities from these industry leaders.</string>
    <string name="recruiters">Top Recruiters</string>
    <string name="our_purpose">Our Purpose</string>
    <string name="the_purpose_of_campus_live_is_to_provide_the_latest_news_updates_and_events_related_to_the_bncet_college_campus_community">The purpose of Campus Live is to provide the latest news, updates, and events related to the BNCET college campus community.</string>
    <string name="welcome_to_our_institution_and_thank_you_for_your_interest_in_joining_us_our_aim_is_to_help_you_build_the_foundation_of_your_successful_career_and_we_are_honored_to_be_a_part_of_that_journey_modern_education_is_all_about_preparing_for_the_future_and_we_are_committed_to_ensuring_that_you_receive_the_best_educational_standards_that_are_in_vogue_all_over_the_world_we_understand_that_you_will_be_competing_with_the_best_among_the_best_and_we_want_to_help_you_succeed_therefore_we_encourage_you_to_make_the_most_of_your_time_here_every_minute_counts_and_we_want_to_see_you_make_progress_with_every_step_we_will_do_all_in_our_capacity_to_bring_out_the_best_in_you_but_we_also_need_your_cooperation_to_establish_the_highest_standards_of_academic_excellence_once_again_welcome_to_our_institution_and_we_look_forward_to_greeting_you">Welcome to our institution and thank you for your interest in joining us. Our aim is to help you build the foundation of your successful career, and we are honored to be a part of that journey.\n\nModern education is all about preparing for the future and we are committed to ensuring that you receive the best educational standards that are in vogue all over the world. We understand that you will be competing with the best among the best, and we want to help you succeed.\n\nTherefore, we encourage you to make the most of your time here. Every minute counts, and we want to see you make progress with every step. We will do all in our capacity to bring out the best in you, but we also need your cooperation to establish the highest standards of academic excellence.\n\nOnce again, welcome to our institution, and we look forward to greeting you.\"</string>
    <string name="shri_mahesh_singh_patel">Shri Mahesh Singh Patel</string>
    <string name="hon_ble_chairman_bncet_group">Hon’ble Chairman | BNCET Group</string>
    <string name="a_message_from_dg_sir">A message from DG sir</string>
    <string name="bncet_is_aicte_and_ministry_of_mhrd_approved_and_affiliated_to_dr_a_p_j_abdul_kalam_technical_university_we_provide_a_ragging_free_campus_and_personal_counseling_ranked_44th_in_nirf_ranking_by_mhrd_we_have_the_best_placements_in_the_last_three_years_life_at_bncet_includes_various_activities_like_seminars_workshops_tours_cultural_events_sports_and_dramatics_for_overall_student_development_our_focus_is_on_quality_infrastructure_world_class_facilities_and_innovative_teaching_for_education_growth">BNCET is AICTE and Ministry of MHRD approved and affiliated to Dr. A.P.J. Abdul Kalam Technical University. We provide a ragging-free campus and personal counseling. Ranked 44th in NIRF ranking by MHRD, we have the best placements in the last three years. Life at BNCET includes various activities like seminars, workshops, tours, cultural events, sports, and dramatics for overall student development. Our focus is on quality infrastructure, world-class facilities, and innovative teaching for education growth.</string>
    <string name="prof_dr_raghuvir_kumar_b_e_m_e_ph_d_hon_ble_director_general_bncet_group">Prof. (Dr.) Raghuvir Kumar\n(B.E., M.E., Ph.D)\nHon’ble Director General\nBNCET Group</string>
    <string name="we_prioritize_skill_development_in_engineering_to_promote_the_competence_of_our_students_leading_to_innovation_and_productivity_our_highly_qualified_faculty_provides_a_quality_technical_education_and_academic_counseling_preparing_our_students_to_become_global_citizens_with_a_focus_on_moral_values_we_encourage_overall_personality_development_through_extracurricular_activities_sports_clubs_and_online_technical_courses_education_is_the_key_to_fulfilling_our_hopes_and_dreams_and_benefiting_our_nation">We prioritize skill development in engineering to promote the competence of our students, leading to innovation and productivity. Our highly qualified faculty provides a quality technical education and academic counseling, preparing our students to become global citizens. With a focus on moral values, we encourage overall personality development through extracurricular activities, sports clubs, and online technical courses. Education is the key to fulfilling our hopes and dreams and benefiting our nation.</string>
    <string name="prof_dr_ajay_kumar_sachan_hon_ble_director_bncet_group">none</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="why_bncet">Why BNCET</string>
    <string name="bncet_is_a_consortium_of_leading">BNCET is a consortium of leading colleges of International standards has been established under the auspicious aegis of Baij Nath Charitable and Educational Trust in the year 2008 for setting trends and raising standards for management and technical education.The objective of our Techno-Managerial programs is to equip our students with knowledge, skills and confidence needed to develop corporate leaders, strategists and decision makers who can significantly contribute in nation building exercise.An exhaustive, intensive industry and trade related curriculum covers almost all the functional dimensions of techno managerial education. Case studies, live projects, presentations, seminars, symposiums, internships, study trips and industrial visits part and parcel of the program.It is our endeavor to make each BNCETian a success story and BNCET as a pre-eminent techno management college of India for nurturing talent and advancing knowledge in multi ethnic learning environment.</string>
    <string name="our_awards">Our Awards</string>
    <string name="excellence_in_education_award_group_in_presence_of_minister_urban_development_govt_of_u_p">Excellence In Education Award Group In Presence Of Minister Urban Development, Govt. Of U.P.</string>
    <string name="top_performing_national_education_award">Top Performing National Education Award</string>
    <string name="excellence_in_education_award_2020_by_the_times_group">Excellence In Education Award 2020 By The Times Group</string>
    <string name="vision_mission"><![CDATA[Vision & Mission]]></string>
    <string name="our_mission">Our Mission-</string>
    <string name="to_produce_innovativ">To produce innovative and technically strong professionals with adequate knowledge, skills, and attitude to make them capable of facing challenges in all spheres of life.Impart excellent environment for the development of professional skills by providing quality education, extra-curricular activities and creating an ethical culture to benefit society and industry.</string>
    <string name="our_vision">Our Vision-</string>
    <string name="strive_to_develop_as_an_institution_of_excellence_in_professional_and_technical_education_that_enables_youth_to_be_innovative_with_inherent_morality_and_skills_to_be_a_valuable_asset_for_society_and_nation">Strive to develop as an institution of excellence in professional and technical education that enables youth to be innovative with inherent morality and skills, to be a valuable asset for society and nation.</string>
    <string name="department">Department</string>
    <string name="swipe_up">swipe up</string>
    <string name="placement">Placement</string>
</resources>