<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2b2b2b"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/semibold"
                android:padding="2dp"
                android:text="@string/headline"
                android:textColor="#AAAAAA"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/desc"
                android:text="@string/description"
                android:textColor="#AAAAAA"
                android:textSize="14sp"
                android:fontFamily="@font/regular"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_colorFilter="#8E8E8E"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="78dp"
            app:lottie_rawRes="@raw/scrol"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_colorFilter="#8E8E8E"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="81dp"
            app:lottie_rawRes="@raw/scrol"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/swipe_up"
            android:textColor="#8E8E8E"
            android:textSize="9sp"
            tools:ignore="SmallSp,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
<!--        <ImageButton-->
<!--            android:id="@+id/slide_left_button"-->
<!--            android:layout_width="25dp"-->
<!--            android:layout_height="25dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:background="@drawable/arrow_back"-->
<!--            tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />-->

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="235dp"
            android:background="@drawable/shape"
            android:backgroundTint="#303030"
            android:gravity="center"
            android:text="@string/campus_live"
            android:textColor="#CFCFCF"
            android:textSize="10sp"
            android:fontFamily="@font/regular"
            android:textStyle="bold"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:cropToPadding="true"
            android:padding="1dp"
            android:layout_gravity="bottom"
            android:scaleType="centerCrop"
            android:src="#4B96B8"
            tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/head"
            android:textColor="#E4E4E4"
            android:fontFamily="@font/semibold"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />


    </androidx.cardview.widget.CardView>


</LinearLayout>